hphp/test/zend/good/ext/simplexml/tests/bug24392.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("simplexml")) print "skip simplexml extension is not loaded";
}
